<resources>
    <string name="app_name">Calculator2.0</string>
    <string name="key1">1</string>
    <string name="key2">2</string>
    <string name="key3">3</string>
    <string name="key4">4</string>
    <string name="key5">5</string>
    <string name="key6">6</string>
    <string name="key7">7</string>
    <string name="key8">8</string>
    <string name="key9">9</string>
    <string name="key0">0</string>
    <string name="keyPoint">.</string>
    <string name="keyClear">C</string>
    <string name="keyPlusMinus">+/-</string>
    <string name="keyPercent">%</string>
    <string name="keyDivision">/</string>
    <string name="keyMultiplication">*</string>
    <string name="keyMinus">-</string>
    <string name="keyPlus">+</string>
    <string name="keyTwo0">00</string>
    <string name="keyResult">=</string>
    <string name="resultField">%f</string>
    <string name="operationField">%s</string>

</resources>